# MLServ

./: dune-project  ml_serv.opam
_build/: .db  .digest-db  log
_build/default/: ocaml_router.dune-package  ocaml_router.install
_build/default/.dune/: configurator  configurator.v2
_build/default/lib/: ocaml_client.cma  ocaml_client.cmxa  ocaml_client.cmxs  ocaml_server.cma  ocaml_server.cmxa  ocaml_server.cmxs  test_file.cma  test_file.cmxa  test_file.cmxs
_build/default/lib/.merlin-conf/: lib-ocaml_client  lib-ocaml_server  lib-test_file
_build/default/lib/.ocaml_client.objs/byte/: ocaml_client.cmi  ocaml_client.cmo  ocaml_client.cmt
_build/default/lib/.ocaml_client.objs/native/: ocaml_client.cmx
_build/default/lib/.ocaml_server.objs/byte/: ocaml_server.cmi  ocaml_server.cmo  ocaml_server.cmt
_build/default/lib/.ocaml_server.objs/native/: ocaml_server.cmx
_build/default/lib/.test_file.objs/byte/: test_file.cmi  test_file.cmo  test_file.cmt
_build/default/lib/.test_file.objs/native/: test_file.cmx
_build/default/test/.merlin-conf/: exe-test_ocaml_router
_build/default/test/.test_ocaml_router.eobjs/byte/: dune__exe__Test_ocaml_router.cmi  dune__exe__Test_ocaml_router.cmti
_build/default/test/.test_ocaml_router.eobjs/native/: dune__exe__Test_ocaml_router.cmx
_build/install/default/lib/ocaml_router/: META  dune-package  opam
lib/: dune
test/: dune
